# r1cs_gadgets

./: Cargo.toml  README.md  constraint.csv
src/: lib.rs  non_zero.rs  r1cs_utils.rs
tests/: bound_check.rs  lin_com.rs  lin_com2.rs  non_zero.rs  r1cs_utils.rs  set_mem.rs  shuff.rs  sorted.rs  sorted2  sorted2.rs
